# RayCastingOnCube-OpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
models/: Cube.cpp  Cube.h  Rectangle.cpp  Rectangle.h  TruncatedCube.cpp  TruncatedCube.h
opengl/: FrameBuffer.cpp  FrameBuffer.h  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h
shaders/: Fragment.frag  Fragment.vert
tools/: Camera.cpp  Camera.h  Logger.h  PositionGenerator.h  Timer.cpp  Timer.h
window/: Window.cpp  Window.h
